--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 
-<h1>Site under maintenance</h1>
+<h1>Aashutosh Taikar</h1>
 
-<p>maintenance.</p>
-
+<p>Test</p>
+<iframe src="Aashutosh_Taikar_Resume.pdf" width="500" height="700">
 </body>
 </html>
 
