--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>Aashutosh Taikar</h1>
 
-<p>Test</p>
+<p>My Resume</p>
 <iframe src="Aashutosh_Taikar_Resume.pdf" width="500" height="700">
 </body>
 </html>
