--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <body>
 
 <h1>Aashutosh Taikar</h1>
+<p>
+<a href="aboutme" target="_self">Link to page 2</a>
+</p>
 
-<p>My Resume</p>
-<iframe src="Aashutosh_Taikar_Resume.pdf" width="500" height="700">
+<p>
+<a href="Resume" target="_self">Link to page 2</a>
+</p>
+
+<p>
+<a href="Projects" target="_self">Link to page 2</a>
+</p>
+
 </body>
 </html>
 
