--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 
 <h1>Aashutosh Taikar</h1>
 <p>
-<a href="aboutme" target="_self">Link to page 2</a>
+<a href="aboutme" target="_self">about me</a>
 </p>
 
 <p>
-<a href="Resume" target="_self">Link to page 2</a>
+<a href="Resume" target="_self">Resume</a>
 </p>
 
 <p>
-<a href="Projects" target="_self">Link to page 2</a>
+<a href="Projects" target="_self">Projects</a>
 </p>
 
 </body>
