--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-<p>My Resume</p>
-<iframe src="Aashutosh_Taikar_Resume.pdf" width="500" height="700">
+<head>My Resume</head>
 </body>
 </html>
