--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 
 <html>
-<body>
+<body background="mybackground.jpg">
 
 <h1>Aashutosh Taikar</h1>
 <p>
-<a href="aboutme" target="_self">about me</a>
+<a href="aboutme" target="_self">About me</a>
+test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters 
 </p>
 
 <p>
