--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body background="backgr.jpg">
 
-<h1>Aashutosh Taikar</h1>
+<h1 align="center">Aashutosh Taikar</h1>
 <p>
 <a href="aboutme" target="_self">About me</a> <br>
 test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters test charachters 
