--- a/Resume.html
+++ b/Resume.html
@@ -1,5 +1,5 @@
 <html>
-<body>
+<body background="backgr.jpg">
 <p>My Resume</p>
 <iframe src="Aashutosh_Taikar_Resume.pdf" width="500" height="700">
 </body>
