--- a/Resume.html
+++ b/Resume.html
@@ -1,6 +1,6 @@
 <html>
 <body background="backgr.jpg">
 <h1>My Resume</h1>
-<iframe src="Aashutosh_Taikar_Resume.pdf" width="500" height="700">
+<iframe align="center" src="Aashutosh_Taikar_Resume.pdf" width="500" height="700">
 </body>
 </html>
