--- a/Resume.html
+++ b/Resume.html
@@ -1,7 +1,7 @@
 <html>
 <body background="backgr.jpg">
 <h1>My Resume</h1>
-<iframe src="Aashutosh_Taikar_Resume.pdf" width="500" height="700" align="center">
+<iframe src="Aashutosh_Taikar_Resume.pdf" width="500" height="700" align="middle">
 </iframe>
 </body>
 </html>
