--- a/projects.html
+++ b/projects.html
@@ -1,21 +1,21 @@
 <html>
 <body background="backgr.jpg">
 <h1>Projects</h1>
-<h2>Autocorrelation using OpenMP, SIMD on CPU and OpenCL on GPU</h2>
+<h2><a href="https://github.com/aashutoshtaikar/parallel-programming/tree/master/project7b">Autocorrelation using OpenMP, SIMD on CPU and OpenCL on GPU</a></h2>
 <p>This project reads a random signal file in an array, duplicates the array, runs the Autocorrelation function on multiple threads using OpenMP to increase the performance. The same task is implemented using the SIMD and OpenCL where the performance obtained is maximum of all by using OpenCL, as the data level parallelism is exploited using GPU elements.<br></p>
 
-<h2>Cache Simulation</h2>
+<h2><a href="https://github.com/aashutoshtaikar/ComputerArchitecture/blob/master/CAProjectreport.docx.pdf">Cache Simulation</a></h2>
 <p>Simulated the performance of the cache under the following conditions: <br>
 ●least-recently-used (LRU) replacement policy,32 to 512 sets, 1-way to 8-way associativity, 16-byte cache lines.<br>
 ● least-recently-used (LRU) replacement policy, 16-byte cache lines (block size), Sets/associativity combinations: 128/1, 128/2, 128/4, 2048/1, 2048/2, 2048/4, (Only L1 caches assumed present). <br></p>
 
-<h2>Implementation of Link Management Protocol Control Channel Finite State Machine</h2>
+<h2><a href="https://github.com/aashutoshtaikar/LMPprotocol-implementation">Implementation of Link Management Protocol Control Channel Finite State Machine</a></h2>
 <p>In this project, we implemented a part of LMP, which controls the Finite State Machine of the Control Channel. We obtained the information from the RFC4204 document, which entirely describes the LMP protocol. We implemented a part of the LMP, which is the Control Channel Finite State Machine using socket programming by studying various states and events of the FSM. <br></p>
 
-<h2>Raft-Leader election implementation</h2>
+<h2><a href="https://github.com/aashutoshtaikar/distributedsystems/tree/master/raft">Raft-Leader election implementation</a></h2>
 <p>Raft is a consensus algorithm. The main part of the Raft is the leader election. The leader election is implemented using the logic described in the Raft algorithm. Three states described in the Raft were setup in this algorithm, which changed as per the Election Timeout in the program. The servers agreed upon the leader election and detected a leader getting failed to re-elect a leader for the next term.</p>
 
-<h2>Hadoop Map-Reduce Task Implementation</h2>
+<h2><a href="https://github.com/aashutoshtaikar/distributedsystems/tree/master/hadoop">Hadoop Map-Reduce Task Implementation</a></h2>
 <p>Created a program to dictionary sort the words by taking input from a text file.<br>
 Created a program to compute the number of times items in pair were purchased from a Supermarket.<br></p>
 
