--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <h1 align="center">Aashutosh Taikar</h1>
 <p>
-<a href="aboutme" target="_self">About me</a> <br>
+<a href="aboutme" target="_self">About me</a>  <a href="Resume" target="_self" align="middle">Resume</a>
+<a href="projects" target="_self" align="right">Projects</a> <br>
 <p>I am a graduate student at Oregon State University, pursuing Master’s in Electrical and Computer Engineering concentrating in the embedded systems domain.<br>
 </p>
 <p>I have a good experience in Linux shell scripting and command line usage which I have used in my projects along with Parallel Programming in C++(OpenMp, OpenCL). I have also worked on an academic project which involved the implementation of Control Channel Finite State Machine of the Link Management Protocol used in the configuration and management of optical network devices. Also, implemented a Raft leader, election protocol which involved TCP switching as a project for Distributed Systems in GoLang. <br>
@@ -12,13 +13,6 @@
 <p>I worked as a Network Operations Center Support Engineer at Continuum Managed Solutions, Mumbai, India which gave me a good hands-on with troubleshooting and maintaining Windows servers by checking the system event logs and starting/stopping required network services. During my Bachelor’s we implemented a project Farm-Bot in which I was responsible to design the circuit, programing the micro-controller for automation of the Bot. <br>
 </p>
 
-<p>
-<a href="Resume" target="_self">Resume</a>
-</p>
-
-<p>
-<a href="projects" target="_self">Projects</a>
-</p>
 
 </body>
 </html>
