--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1 align="center">Aashutosh Taikar</h1>
 <p>
-<a href="aboutme" target="_self">About me</a>  <a href="Resume" target="_self" align="middle">Resume</a>
+<align="middle"><a href="aboutme" target="_self">About me</a>  <a href="Resume" target="_self" align="middle">Resume</a>
 <a href="projects" target="_self" align="right">Projects</a> <br>
 <p>I am a graduate student at Oregon State University, pursuing Master’s in Electrical and Computer Engineering concentrating in the embedded systems domain.<br>
 </p>
