--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
 <h1 align="center">Aashutosh Taikar</h1>
 <p> <div align="center">
-<a href="aboutme" target="_self">About me</a>  <a href="Resume" target="_self" >Resume</a>
-<a href="projects" target="_self">Projects</a> </div><br>
+<a href="aboutme" target="_self">About me</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="Resume" target="_self" >Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="projects" target="_self">Projects</a> </div><br>
 <p>I am a graduate student at Oregon State University, pursuing Master’s in Electrical and Computer Engineering concentrating in the embedded systems domain.<br>
 </p>
 <p>I have a good experience in Linux shell scripting and command line usage which I have used in my projects along with Parallel Programming in C++(OpenMp, OpenCL). I have also worked on an academic project which involved the implementation of Control Channel Finite State Machine of the Link Management Protocol used in the configuration and management of optical network devices. Also, implemented a Raft leader, election protocol which involved TCP switching as a project for Distributed Systems in GoLang. <br>
