--- a/index.html
+++ b/index.html
@@ -22,17 +22,11 @@ header {
     color: white;
 }
 
-/* Container for flexboxes */
-section {
-    display: -webkit-flex;
-    display: flex;
-}
-
-/* Style the navigation menu */
+/* Create two columns/boxes that floats next to each other */
 nav {
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
+    float: left;
+    width: 30%;
+    height: 700px; /* only for demonstration, should be removed */
     background: #ccc;
     padding: 20px;
 }
@@ -43,13 +37,19 @@ nav ul {
     padding: 0;
 }
 
-/* Style the content */
 article {
-    -webkit-flex: 3;
-    -ms-flex: 3;
-    flex: 3;
+    float: left;
+    padding: 20px;
+    width: 70%;
     background-color: #f1f1f1;
-    padding: 10px;
+    height: 300px; /* only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 /* Style the footer */
@@ -60,45 +60,43 @@ footer {
     color: white;
 }
 
-/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 @media (max-width: 600px) {
-    section {
-      -webkit-flex-direction: column;
-      flex-direction: column;
+    nav, article {
+        width: 100%;
+        height: auto;
     }
 }
 </style>
 </head>
 <body>
 
-<h2>CSS Layout Flexbox</h2>
-<p>In this example, we have created a header, two columns/boxes and a footer. On smaller screens, the columns will stack on top of each other.</p>
-<p>Resize the browser window to see the responsive effect.</p>
-<p><strong>Note:</strong> Flexbox is not supported in Internet Explorer 10 eand earlier versions.</p>
 
 <header>
-  <h2>Cities</h2>
+  <h2>Aashutosh Taikar</h2>
 </header>
 
 <section>
   <nav>
     <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
+      <li><a href="aboutme" target="_self">About Me</a></li>
+      <li><a href="Resume" target="_self" >Resume</a></li>
+      <li><a href="projects" target="_self">Projects</a></li>
     </ul>
   </nav>
   
-  <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-  </article>
+ <article>	
+<p>I am a graduate student at Oregon State University, pursuing Master’s in Electrical and Computer Engineering with a Concentration in Embedded Systems domain. I will be graduating in fall 2018 and am looking for a full time opportunity.</p> <br> 
+
+<p>I am currently working at On Semiconductor as a Technology Reliability Intern. During my internship, I worked on a project to Automate bulk reliability testing of (DUTs) Devices Under Test, essentially transistors or other packages for HTOL test and measurement. This was implemented using VB.Net and National Instruments libraries for the GPIB interface along with a DAQ device. The application communicates to multiple SMUs (Source Meter Unit) via GPIB, ensuring synchronization between the DUT tests. It also involved designing of the schematic of the Control Board in Cadence Allegro which consisted of extensive relays. Using this application multiple DUTs can be tested by user-defined settings in the application. The measured parameters are also stored in an excel sheet according to Date and Time.</p> <br>     
+ 
+<p>I have a good experience in Linux shell scripting which I have used in my projects along with Parallel Programming in C++ (OpenMp, OpenCL). I have also worked on an academic project which involved the implementation of Control Channel Finite State Machine of the Link Management Protocol used in the configuration and management of optical network devices. Also, implemented a Raft leader election protocol which involved TCP switching as a project for Distributed Systems in GoLang.</p> <br>  
+
+<p>I worked as a Network Operations Center Support Engineer at Continuum Managed Solutions, Mumbai, India which gave me a good hands-on with troubleshooting and maintaining Windows servers by checking the system event logs and starting/stopping required network services. During my Bachelor’s we implemented a project Farm-Bot in which I was responsible to design the circuit, programing the microcontroller for automation of the Bot.</p> <br>  
+</article>
 </section>
 
-<footer>
-  <p>Footer</p>
-</footer>
+
 
 </body>
 </html>
