--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="aboutme" target="_self">About Me</a></li>
-      <li><a href="Resume" target="_self" >Resume</a></li>
-      <li><a href="projects" target="_self">Projects</a></li>
+      <li><a href="aboutme" target="_self">About Me</a></li><br>
+      <li><a href="Resume" target="_self" >Resume</a></li><br>
+      <li><a href="projects" target="_self">Projects</a></li><br>
     </ul>
   </nav>
   
