--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ header {
 nav {
     float: left;
     width: 30%;
-    height: 700px; /* only for demonstration, should be removed */
+    height: 800px; /* only for demonstration, should be removed */
     background: #ccc;
     padding: 20px;
 }
@@ -42,7 +42,7 @@ article {
     padding: 20px;
     width: 70%;
     background-color: #f1f1f1;
-    height: 300px; /* only for demonstration, should be removed */
+    height: 800px; /* only for demonstration, should be removed */
 }
 
 /* Clear floats after the columns */
@@ -82,13 +82,16 @@ footer {
       <li><a href="aboutme" target="_self">About Me</a></li><br>
       <li><a href="Resume" target="_self" >Resume</a></li><br>
       <li><a href="projects" target="_self">Projects</a></li><br>
+      <li><a href="https://github.com/aashutoshtaikar/" target="https://github.com/aashutoshtaikar">GitHub</a></li><br>
+      <li><a href="https://www.linkedin.com/in/aashutoshtaikar/" target="https://www.linkedin.com/in/aashutoshtaikar/">LinkedIn</a></li><br>
+      <li><a href="mailto:ataikar@outlook.com">Email:ataikar@outlook.com</a></li><br>
     </ul>
   </nav>
   
- <article>	
+ <article>  
 <p>I am a graduate student at Oregon State University, pursuing Master’s in Electrical and Computer Engineering with a Concentration in Embedded Systems domain. I will be graduating in fall 2018 and am looking for a full time opportunity.</p> <br> 
 
-<p>I am currently working at On Semiconductor as a Technology Reliability Intern. During my internship, I worked on a project to Automate bulk reliability testing of (DUTs) Devices Under Test, essentially transistors or other packages for HTOL test and measurement. This was implemented using VB.Net and National Instruments libraries for the GPIB interface along with a DAQ device. The application communicates to multiple SMUs (Source Meter Unit) via GPIB, ensuring synchronization between the DUT tests. It also involved designing of the schematic of the Control Board in Cadence Allegro which consisted of extensive relays. Using this application multiple DUTs can be tested by user-defined settings in the application. The measured parameters are also stored in an excel sheet according to Date and Time.</p> <br>     
+<p>I am currently working at On Semiconductor as a Technology Reliability Intern. During my internship, I worked on a project for In-Situ Parametric Test System for process reliability for (DUTs) Devices Under Test, essentially transistors or other packages. This was implemented using VB.Net and National Instruments libraries for the GPIB interface along with a DAQ device. The application communicates to multiple SMUs (Source Meter Unit) via GPIB, ensuring synchronization between the DUT tests. It also involved designing of the schematic of the Control Board in Cadence Allegro which consisted of extensive relays. Using this application multiple DUTs can be tested by user-defined settings in the application. The measured parameters are also stored in an excel sheet according to Date and Time.</p> <br>     
  
 <p>I have a good experience in Linux shell scripting which I have used in my projects along with Parallel Programming in C++ (OpenMp, OpenCL). I have also worked on an academic project which involved the implementation of Control Channel Finite State Machine of the Link Management Protocol used in the configuration and management of optical network devices. Also, implemented a Raft leader election protocol which involved TCP switching as a project for Distributed Systems in GoLang.</p> <br>  
 
