--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,94 @@
-<html>
-<body background="backgr.jpg">
-<h1>Projects</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>CSS Template</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
+header {
+    background-color: #666;
+    padding: 30px;
+    text-align: center;
+    font-size: 35px;
+    color: white;
+}
+
+/* Create two columns/boxes that floats next to each other */
+nav {
+    float: left;
+    width: 30%;
+    height: 900px; /* only for demonstration, should be removed */
+    background: #ccc;
+    padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+article {
+    float: left;
+    padding: 20px;
+    width: 70%;
+    background-color: #f1f1f1;
+    height: 900px; /* only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Style the footer */
+footer {
+    background-color: #777;
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+    nav, article {
+        width: 100%;
+        height: auto;
+    }
+}
+</style>
+</head>
+<body>
+
+
+<header>
+  <h2>Projects</h2>
+</header>
+
+<section>
+  <nav>
+    <ul>
+      <li><a href="aboutme" target="_self">About Me</a></li><br>
+      <li><a href="Resume" target="_self" >Resume</a></li><br>
+      <li><a href="projects" target="_self">Projects</a></li><br>
+      <li><a href="https://github.com/aashutoshtaikar/" target="https://github.com/aashutoshtaikar">GitHub</a></li><br>
+      <li><a href="https://www.linkedin.com/in/aashutoshtaikar/" target="https://www.linkedin.com/in/aashutoshtaikar/">LinkedIn</a></li><br>
+      <li><a href="mailto:ataikar@outlook.com">Email:ataikar@outlook.com</a></li><br>
+    </ul>
+  </nav>
+  
+  <article>
 <h2><a href="https://github.com/aashutoshtaikar/parallel-programming/tree/master/project7b">Autocorrelation using OpenMP, SIMD on CPU and OpenCL on GPU</a></h2>
 <p>This project reads a random signal file in an array, duplicates the array, runs the Autocorrelation function on multiple threads using OpenMP to increase the performance. The same task is implemented using the SIMD and OpenCL where the performance obtained is maximum of all by using OpenCL, as the data level parallelism is exploited using GPU elements.<br></p>
 
@@ -21,6 +109,10 @@ Created a program to compute the number of times items in pair were purchased fr
 
 <h2><a href="https://sites.google.com/view/farmbot/home">FARMBOT-Agricultural Automation robot</a></h2>
 <p>...</p>
+  </article>
+</section>
+
+
 
 </body>
 </html>
