--- a/aboutme.html
+++ b/aboutme.html
@@ -1,11 +1,105 @@
-<html>
-<body background="backgr.jpg">
-<h1>About me</h1>
-<p>I am a graduate student at Oregon State University, pursuing Master’s in Electrical and Computer Engineering concentrating in the embedded systems domain.<br></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>About Me</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+    box-sizing: border-box;
+}
 
-<p>I have a good experience in Linux shell scripting and command line usage which I have used in my projects along with Parallel Programming in C++(OpenMp, OpenCL). I have also worked on an academic project which involved the implementation of Control Channel Finite State Machine of the Link Management Protocol used in the configuration and management of optical network devices. Also, implemented a Raft leader, election protocol which involved TCP switching as a project for Distributed Systems in GoLang. <br></p>
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
-<p>I worked as a Network Operations Center Support Engineer at Continuum Managed Solutions, Mumbai, India which gave me a good hands-on with troubleshooting and maintaining Windows servers by checking the system event logs and starting/stopping required network services. During my Bachelor’s we implemented a project Farm-Bot in which I was responsible to design the circuit, programing the micro-controller for automation of the Bot. <br></p>
+/* Style the header */
+header {
+    background-color: #666;
+    padding: 30px;
+    text-align: center;
+    font-size: 35px;
+    color: white;
+}
+
+/* Create two columns/boxes that floats next to each other */
+nav {
+    float: left;
+    width: 30%;
+    height: 800px; /* only for demonstration, should be removed */
+    background: #ccc;
+    padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+article {
+    float: left;
+    padding: 20px;
+    width: 70%;
+    background-color: #f1f1f1;
+    height: 800px; /* only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Style the footer */
+footer {
+    background-color: #777;
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+    nav, article {
+        width: 100%;
+        height: auto;
+    }
+}
+</style>
+</head>
+<body>
+
+
+<header>
+  <h2>Aashutosh Taikar</h2>
+</header>
+
+<section>
+  <nav>
+    <ul>
+      <li><a href="aboutme" target="_self">About Me</a></li><br>
+      <li><a href="Resume" target="_self" >Resume</a></li><br>
+      <li><a href="projects" target="_self">Projects</a></li><br>
+      <li><a href="https://github.com/aashutoshtaikar/" target="https://github.com/aashutoshtaikar">GitHub</a></li><br>
+      <li><a href="https://www.linkedin.com/in/aashutoshtaikar/" target="https://www.linkedin.com/in/aashutoshtaikar/">LinkedIn</a></li><br>
+      <li><a href="mailto:ataikar@outlook.com">Email:ataikar@outlook.com</a></li><br>
+    </ul>
+  </nav>
+  
+ <article>  
+<p>I am a graduate student at Oregon State University, pursuing Master’s in Electrical and Computer Engineering with a Concentration in Embedded Systems domain. I will be graduating in fall 2018 and am looking for a full time opportunity.</p> <br> 
+
+<p>I am currently working at On Semiconductor as a Technology Reliability Intern. During my internship, I worked on a project for In-Situ Parametric Test System for process reliability for (DUTs) Devices Under Test, essentially transistors or other packages. This was implemented using VB.Net and National Instruments libraries for the GPIB interface along with a DAQ device. The application communicates to multiple SMUs (Source Meter Unit) via GPIB, ensuring synchronization between the DUT tests. It also involved designing of the schematic of the Control Board in Cadence Allegro which consisted of extensive relays. Using this application multiple DUTs can be tested by user-defined settings in the application. The measured parameters are also stored in an excel sheet according to Date and Time.</p> <br>     
+ 
+<p>I have a good experience in Linux shell scripting which I have used in my projects along with Parallel Programming in C++ (OpenMp, OpenCL). I have also worked on an academic project which involved the implementation of Control Channel Finite State Machine of the Link Management Protocol used in the configuration and management of optical network devices. Also, implemented a Raft leader election protocol which involved TCP switching as a project for Distributed Systems in GoLang.</p> <br>  
+
+<p>I worked as a Network Operations Center Support Engineer at Continuum Managed Solutions, Mumbai, India which gave me a good hands-on with troubleshooting and maintaining Windows servers by checking the system event logs and starting/stopping required network services. During my Bachelor’s we implemented a project Farm-Bot in which I was responsible to design the circuit, programing the microcontroller for automation of the Bot.</p> <br>  
+</article>
+</section>
+
+
 
 </body>
 </html>
