--- a/Resume.html
+++ b/Resume.html
@@ -89,7 +89,7 @@ footer {
   </nav>
   
   <article>
-<iframe src="Aashutosh_Taikar_Resume.pdf" width="500" height="700" align="middle">
+<iframe src="AashutoshTaikar_Resume.pdf" width="500" height="700" align="middle">
 </iframe>
   </article>
 </section>
