--- a/aboutme.html
+++ b/aboutme.html
@@ -80,7 +80,7 @@ footer {
   <nav>
     <ul>
       <li><a href="aboutme" target="_self">About Me</a></li><br>
-      <li><a href="Resume" target="_self" >Resume</a></li><br>
+      <li><a href="Aashutosh_Taikar_Resume.pdf" target="_self" >Resume</a></li><br>
       <li><a href="projects" target="_self">Projects</a></li><br>
       <li><a href="https://github.com/aashutoshtaikar/" target="https://github.com/aashutoshtaikar">GitHub</a></li><br>
       <li><a href="https://www.linkedin.com/in/aashutoshtaikar/" target="https://www.linkedin.com/in/aashutoshtaikar/">LinkedIn</a></li><br>
