--- a/index.html
+++ b/index.html
@@ -79,23 +79,23 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="aboutme" target="_self">About Me</a></li><br>
-      <li><a href="Resume" target="_self" >Resume</a></li><br>
-      <li><a href="projects" target="_self">Projects</a></li><br>
-      <li><a href="https://github.com/aashutoshtaikar/" target="https://github.com/aashutoshtaikar">GitHub</a></li><br>
-      <li><a href="https://www.linkedin.com/in/aashutoshtaikar/" target="https://www.linkedin.com/in/aashutoshtaikar/">LinkedIn</a></li><br>
-      <li><a href="mailto:ataikar@outlook.com">Email:ataikar@outlook.com</a></li><br>
+        <li><a href="index.html" target="_self">Home</a></li><br>
+        <li><a href="Aashutosh_Taikar_Resume.pdf" target="_self" >Resume</a></li><br>
+        <li><a href="projects.html" target="_self">Projects</a></li><br>
+        <li><a href="https://github.com/aashutoshtaikar/" target="https://github.com/aashutoshtaikar">GitHub</a></li><br>
+        <li><a href="https://www.linkedin.com/in/aashutoshtaikar/" target="https://www.linkedin.com/in/aashutoshtaikar/">LinkedIn</a></li><br>
+        <li><a href="mailto:ataikar@outlook.com">Email:ataikar@outlook.com</a></li><br>
     </ul>
   </nav>
   
  <article>  
-<p>I am a graduate student at Oregon State University, pursuing Master’s in Electrical and Computer Engineering with a Concentration in Embedded Systems domain. I will be graduating in fall 2018 and am looking for a full time opportunity.</p> <br> 
+    <p> I am Aashutosh, a Master’s grad from Oregon State University, in Electrical and Computer Engineering with a Concentration in Systems & Networking domain. I graduated in fall 2018 and am looking for a full-time opportunity in C/C++ software development domain.</p> <br> 
 
-<p>I am currently working at On Semiconductor as a Technology Reliability Intern. During my internship, I worked on a project for In-Situ Parametric Test System for process reliability for (DUTs) Devices Under Test, essentially transistors or other packages. This was implemented using VB.Net and National Instruments libraries for the GPIB interface along with a DAQ device. The application communicates to multiple SMUs (Source Meter Unit) via GPIB, ensuring synchronization between the DUT tests. It also involved designing of the schematic of the Control Board in Cadence Allegro which consisted of extensive relays. Using this application multiple DUTs can be tested by user-defined settings in the application. The measured parameters are also stored in an excel sheet according to Date and Time.</p> <br>     
- 
-<p>I have a good experience in Linux shell scripting which I have used in my projects along with Parallel Programming in C++ (OpenMp, OpenCL). I have also worked on an academic project which involved the implementation of Control Channel Finite State Machine of the Link Management Protocol used in the configuration and management of optical network devices. Also, implemented a Raft leader election protocol which involved TCP switching as a project for Distributed Systems in GoLang.</p> <br>  
-
-<p>I worked as a Network Operations Center Support Engineer at Continuum Managed Solutions, Mumbai, India which gave me a good hands-on with troubleshooting and maintaining Windows servers by checking the system event logs and starting/stopping required network services. During my Bachelor’s we implemented a project Farm-Bot in which I was responsible to design the circuit, programing the microcontroller for automation of the Bot.</p> <br>  
+    <p>(2018) I worked at On Semiconductor as a Technology Reliability Intern. During my internship, I worked on a project for In-Situ Parametric Test System for process reliability for (DUTs) Devices Under Test, essentially transistors or other packages. This was implemented using VB.Net and National Instruments libraries for the GPIB interface along with a DAQ device. The application communicates to multiple SMUs (Source Meter Unit) via GPIB, ensuring synchronization between the DUT tests. It also involved designing of the schematic of the Control Board in Cadence Allegro which consisted of extensive relays. Using this application multiple DUTs can be tested by user-defined settings in the application. The measured parameters are also stored in an excel sheet according to Date and Time.</p> <br>     
+     
+    <p>(2017) I have a good experience in Linux shell scripting which I have used in my projects along with Parallel Programming in C++ (OpenMp, OpenCL). I have also worked on an academic project which involved the implementation of Control Channel Finite State Machine of the Link Management Protocol used in the configuration and management of optical network devices. Also, implemented a Raft leader election protocol which involved TCP switching as a project for Distributed Systems in GoLang.</p> <br>  
+    
+    <p>(2015) I worked as a Network Operations Center Support Engineer at Continuum Managed Solutions, Mumbai, India which gave me a good hands-on with troubleshooting and maintaining Windows servers by checking the system event logs and starting/stopping required network services. During my Bachelor’s we implemented a project Farm-Bot in which I was responsible to design the circuit, programing the microcontroller for automation of the Bot.</p> <br>  
 </article>
 </section>
 
