--- a/projects.html
+++ b/projects.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>Projects</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
+header {
+    background-color: #666;
+    padding: 30px;
+    text-align: center;
+    font-size: 35px;
+    color: white;
 }
 
 /* Create two columns/boxes that floats next to each other */
 nav {
     float: left;
     width: 30%;
-    //height: 900px; /* only for demonstration, should be removed */
+    height: 900px; /* only for demonstration, should be removed */
     background: #ccc;
     padding: 20px;
 }
@@ -35,91 +42,15 @@ article {
     padding: 20px;
     width: 70%;
     background-color: #f1f1f1;
-   // height: 900px; /* only for demonstration, should be removed */
+    height: 900px; /* only for demonstration, should be removed */
 }
 
-header {
-    background-color: darkorange;
-    padding: 30px;
-    text-align: center;
-    font-size: 35px;
-    color: white;
+/* Clear floats after the columns */
+section:after {
+    content: "";
+    display: table;
+    clear: both;
 }
-
-/* Style the top navigation bar */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-/* Style the topnav links */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change color on hover */
-.topnav a:hover {
-  background-color: red;
-  color: black;
-}
-
-/* Style the content */
-.content {
-  background-color: #ddd;
-  padding: 10px;
-  height: 200px; /* Should be removed. Only for demonstration */
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-
 
 /* Style the footer */
 footer {
@@ -129,41 +60,49 @@ footer {
     color: white;
 }
 
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+    nav, article {
+        width: 100%;
+        height: auto;
+    }
+}
 </style>
 </head>
+<body>
+
 
 <header>
   <h2>Projects</h2>
 </header>
 
-<body>
-
-<div class="topnav">
-  <a href="index.html" target="_self">Home</a>
-  <a href="projects.html" target="_self">Projects</a>
-  <div class="dropdown">
-    <button class="dropbtn">Resume 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="ResumeCS.pdf" target="_self">Resume(Software Engineer)</a>
-      <a href="ResumeEE.pdf" target="_self">Resume(Mixed Signal)</a>
-    </div>
-  </div> 
-</div>
-
-
-
 <section>
   <nav>
     <ul>
+      <li><a href="index.html" target="_self">Home</a></li><br>
+      <li><a href="Aashutosh_Taikar_Resume.pdf" target="_self" >Resume</a></li><br>
+      <li><a href="projects.html" target="_self">Projects</a></li><br>
       <li><a href="https://github.com/aashutoshtaikar/" target="https://github.com/aashutoshtaikar">GitHub</a></li><br>
       <li><a href="https://www.linkedin.com/in/aashutoshtaikar/" target="https://www.linkedin.com/in/aashutoshtaikar/">LinkedIn</a></li><br>
       <li><a href="mailto:ataikar@outlook.com">Email:ataikar@outlook.com</a></li><br>
     </ul>
   </nav>
 
-
+  <div class="navbar">
+    <a href="#home">Home</a>
+    <a href="#news">News</a>
+    <div class="dropdown">
+      <button class="dropbtn">Dropdown 
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div> 
+  </div>
+  
   <article>
 <h2><a href="https://github.com/aashutoshtaikar/parallel-programming/tree/master/project7b">Autocorrelation using OpenMP, SIMD on CPU and OpenCL on GPU</a></h2>
 <p>This project reads a random signal file in an array, duplicates the array, runs the Autocorrelation function on multiple threads using OpenMP to increase the performance. The same task is implemented using the SIMD and OpenCL where the performance obtained is maximum of all by using OpenCL, as the data level parallelism is exploited using GPU elements.<br></p>
@@ -185,8 +124,9 @@ Created a program to compute the number of times items in pair were purchased fr
 
 <h2><a href="https://sites.google.com/view/farmbot/home">FARMBOT-Agricultural Automation robot</a></h2>
 <p>Created Schematics and Code for 8-bit micro-controller for actuation of a prototype bot which can perform basic farming functions for acquiring data from IR sensor using ADC and controlling motor driver ICs by PWM. </p>
-</article>
+  </article>
 </section>
+
 
 
 </body>
