--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script> 
+    function redirectToMypage(params) {
+      if (window.location.href==="https://aashutoshtaikar.github.io") {
+          window.location.href = "https://sites.google.com/view/aashutoshtaikar/home"; 
+      }    
+    }  
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
