--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script> 
-    function redirectToMypage(params) {
+    function redirectToMypage() {
       if (window.location.href==="https://aashutoshtaikar.github.io") {
           window.location.href = "https://sites.google.com/view/aashutoshtaikar/home"; 
       }    
