--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script> 
-    function redirectToMypage() {
-      if (window.location.href==="https://aashutoshtaikar.github.io") {
-          window.location.href = "https://sites.google.com/view/aashutoshtaikar/home"; 
-      }    
-    }  
-    </script>
-    <meta charset="utf-8">
+    <!-- <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
-    
+     -->
+
+     <meta http-equiv="Refresh" content="0; url=https://sites.google.com/view/aashutoshtaikar/home" />
 </head>
-<title>Home</title>
+<!-- <title>Home</title>
 <style>
 * {
   box-sizing: border-box;
@@ -236,5 +231,5 @@ header {
 
 
 
-</body>
+</body> -->
 </html>
