--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <!-- <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
-    
+     -->
 
-     <!-- <meta http-equiv="Refresh" content="0; url=https://www.google.com" /> -->
+     <meta http-equiv="Refresh" content="0; url=https://www.google.com" />
 </head>
-<title>Home</title>
+<!-- <title>Home</title>
 <style>
 * {
   box-sizing: border-box;
@@ -231,5 +231,5 @@ header {
 
 
 
-</body>
+</body> -->
 </html>
