--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <script src="redirect.js">
-        redirectToMypage();
-    </script>
-    <!-- <meta charset="utf-8">
+  <script type="text/javascript" src='redirect.js'> </script>
+</head>
+
+<body>
+  <script>
+    redirectToMypage();
+  </script>
+</body>
+
+</html>
+
+<!-- <head>   
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
-     -->
-
-     <!-- <meta http-equiv="Refresh" content="0; url=https://sites.google.com/view/aashutoshtaikar/home" /> -->
-</head>
+     
+     <meta http-equiv="Refresh" content="0; url=https://sites.google.com/view/aashutoshtaikar/home" /> 
+</head> -->
 
 <!-- <title>Home</title>
 <style>
@@ -235,5 +244,6 @@ header {
 
 
 
-</body> -->
-</html>
+</body> 
+
+</html> -->
