--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <script type="text/javascript" src='redirect.js'> </script>
+<!--   <script type="text/javascript" src='redirect.js'> </script> -->
 </head>
 
 <body>
