--- a/index.html
+++ b/index.html
@@ -1,19 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-<!--   <script type="text/javascript" src='redirect.js'> </script> -->
-</head>
 
-<body>
-  <script>
-    redirectToMypage();
-  </script>
-</body>
-
-</html>
-
-<!-- <head>   
+<head>   
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -22,7 +11,7 @@
      <meta http-equiv="Refresh" content="0; url=https://sites.google.com/view/aashutoshtaikar/home" /> 
 </head> -->
 
-<!-- <title>Home</title>
+ <title>Home</title>
 <style>
 * {
   box-sizing: border-box;
@@ -246,4 +235,4 @@ header {
 
 </body> 
 
-</html> -->
+</html> 
