--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <i class="fa fa-caret-down"></i>
     </button>
             <div class="dropdown-content">
-                <a href="ResumeCS.pdf" target="_self">Resume(Software Engineer)</a>
-                <a href="ResumeEE.pdf" target="_self">Resume(Analog Design Engineer)</a>
+                <a href="#" target="_self">Resume(Software Engineer)</a>
+                <a href="#" target="_self">Download</a>
             </div>
         </div>
     </div>
