--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
       <i class="fa fa-caret-down"></i>
     </button>
             <div class="dropdown-content">
-                <a href="projects_CS.html" target="_self">Projects(Software)</a>
-                <a href="projects_EE.html" target="_self">Projects(Hardware)</a>
+                <a href="#" target="_self">Software(Java)</a>
+                <a href="projects_CS.html" target="_self">Software(C/C++)</a>
+                <a href="projects_EE.html" target="_self">Hardware</a>
             </div>
         </div>
 
@@ -37,7 +38,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
             <div class="dropdown-content">
-                <a href="#" target="_self">Resume(Software Engineer)</a>
+                <a href="#" target="_self">View</a>
                 <a href="#" target="_self">Download</a>
             </div>
         </div>
